# vmquota

./: .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: ARCHITECTURE.md  RUNBOOK.md  TEMPLATE.md
examples/: config.toml
guest/: traffic
src/vmquota/: access_log.py  api.py  billing.py  cli.py  config.py  db.py  models.py  parsing.py  presentation.py  pve.py  shaping.py  syncer.py  system.py
systemd/: vmquota-api.service  vmquota-sync.service  vmquota-sync.timer
tests/: test_access_log.py  test_api.py  test_billing.py  test_cli.py  test_config.py  test_db.py  test_parsing.py  test_presentation.py  test_pve.py  test_shaping.py  test_syncer.py
